methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:5: error: not found: value growFlovers
def fleurs(){growFlovers();gauche;avance(2);droite;avance(6);b(Color.BLUE)} 
             ^